fix timeline content error on mobile

--- a/src/css/responsive.less
+++ b/src/css/responsive.less
@@ -136,6 +136,7 @@
 				p {
 					font-size: 14px;
 					line-height: 20px;
+					height: 350px;
 				}
 			}
 		}
